Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44677

Shared context does not work on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0
    • 5.5.0
    • Canvas3D
    • None
    • Windows 7 (Intel Core i7-4700MQ with Intel HD Graphics 4600)
      Qt 5.5 pre-alpha with desktop OpenGL
      MSVC 2013 & MinGW 4.9.1

    Description

      Outputs the following errors on context creation:

      ARB::createContext: wglCreateContextAttribsARB() failed (GL error code: 0x502)...
      GDI::createContext: wglShareLists() failed. (The requested resource is in use.)

      As shared context creation fails, nothing works correctly (just flashing garbage is drawn).

      Attachments

        For Gerrit Dashboard: QTBUG-44677
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes